# -Skynet-

./: .gitignore  README.md
auth_cpp/: CMakeLists.txt  README.md
auth_cpp/include/: auth_server.h  captcha.h  card_catalog.h  config.h  db.h  password.h  protocol.h
auth_cpp/scripts/: start_auth.sh  stop_auth.sh
auth_cpp/src/: auth_server.cpp  captcha.cpp  db.cpp  main.cpp  password.cpp  protocol.cpp
client/CardBattle-Unity6/: LICENSE  README.md  SETUP_SKYNET.md
client/CardBattle-Unity6/Assets/: UniversalRenderPipelineGlobalSettings.asset
client/CardBattle-Unity6/Assets/Audio/SFX/: MainMixer.mixer
client/CardBattle-Unity6/Assets/Fonts/: Almendra-BoldItalic SDF.asset  Almendra-Regular SDF.asset  Cinzel-Black SDF.asset  Montserrat-SemiBold SDF.asset  StrongShadeDemo-ZVYXm SDF.asset  belwe-bold-bt SDF.asset
client/CardBattle-Unity6/Assets/Scenes/: Battle1.unity  BattleBoss1.unity  MainMenu.unity  Reward1.unity  Victory.unity
client/CardBattle-Unity6/Assets/_Recovery/: 0.unity
client/CardBattle-Unity6/Docs/: TECH_BREAKDOWN.md
client/CardBattle-Unity6/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  ProjectVersion.txt  QualitySettings.asset
docs/: BATTLE_1V1.md  UNITY_BUILD.md
docs/media/: README.md
scripts/: init_db.sql  start.sh  stop.sh
server/config/: config
server/lualib/: db_conf.lua  msg_id.lua  password_util.lua  protocol.lua
server/service/: agent.lua  db.lua  login.lua  main.lua  match.lua  room.lua  watchdog.lua
tools/: run_test_windows.bat  test_battle_1v1.py  test_client.ps1  test_client.py  test_match.sh
(+171 files in other folders)
